--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.17.2",
     "nuxt": "^2.15.8",
+    "vue-i18n": "^8.25.0",
     "vuetify": "^2.5.8"
   },
   "devDependencies": {
