--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.0.3",
     "core-js": "^3.17.2",
     "nuxt": "^2.15.8",
-    "vue-i18n": "^8.25.0",
     "vuetify": "^2.5.8"
   },
   "devDependencies": {
